# intersection_examples

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  basic.py  dynamic_duck_typing.py  mixin.py  never_evaluation.py  notes.txt  overloads.py  protocol_like.py  pyproject.toml  specification.rst  test_basetypes.py  two_abc.py  typed_dict.py  typed_dicts.py  wrappers.py
docs/: any_type_options.md  historical_specification.rst  specification.rst
examples/: any_intersect.py  base_types.py  basic.py  callable_and_proto.py  callables.py  clashing_callables.py  clashing_overloads.py  impossible.py  overloaded_already.py  overloads.py
intersection_examples/: __init__.py
legacy_examples/: animals_so.py  basic.py  fixed_numpy.py  mixin.py  two_abc.py  typed_dict.py  typed_dicts.py  wrappers.py
legacy_examples/intersect_lib/: intersect_lib.py  untyped_lib.py  user_example.py
tests/: _test_basetypes.py  mypy.ini  mypy_test_basic.py  mypy_test_overloads.py  mypy_test_typed_dict.py  mypy_test_typed_dicts.py  test_type_hints.py
